# gtkbrightnesscontrol

./: GtkBrightnessControl_Installer_x86.run  README.md
SourceCode/: .anjuta_sym_db.db  Makefile.in  config.h  configure  configure.ac  libtool
SourceCode/.anjuta/session/: anjuta.session  dock-layout.xml
SourceCode/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
SourceCode/src/: Makefile.am  Makefile.in  gtkbrightnesscontrol.ui  main.c
SourceCode/src/.deps/: main.Po
